<resources>
    <string name="app_name">CallVideo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_video_chat">Video Call</string>
    <string name="title_activity_incoming_call">Incoming Call</string>

    <string name="login">Choose a username and room name:</string>
    <string name="username">Username</string>
    <string name="join_room">Join room!</string>

    <string name="enter_new_channel">Enter new channel:</string>
    <string name="action_leave_room">Leave room</string>
    <string name="here_now">Here Now:</string>
    <string name="no_call_history">No call History\n\nRecent calls appear here.</string>

    <string name="participant_left">%1$s left the room</string>
    <string name="participant_joined">%1$s joined the room</string>
    <string name="room_title">%1$s in room %2$s</string>
    <string name="room_lost_connection">Lost connection to room!</string>
    <string name="room_text_message">%1$s: %2$s</string>
    <string name="room_connecting">Connecting %1$s to room %2$s...</string>

    <!-- Incoming Call Activity -->
    <string name="incoming_call">Incoming Call&#8230;</string>
    <string name="incoming_call_from">Samuli Heinonen</string>
    <string name="appbar_scrolling_view_behavior">behaviour</string>

    <string name="name">Name</string>
    <string name="room">Room</string>
    <string name="message">Message</string>
    <string name="not_joined_to_room">You are not joined to any room.</string>
    <string name="not_connected">You are not connected to the server.</string>

    <string name="button_connect">Connect</string>
    <string name="button_join_room">Join room</string>
    <string name="button_send_message">Send message</string>
    <string name="button_start_videocall">Call</string>
    <string name="button_disconnect">Disconnect</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="connecting">Connecting...</string>
    <string name="waiting_remote_stream">Waiting remote stream...</string>
    <string name="register">Register</string>
    <string name="user_name">Name</string>
    <string name="user_personal_id">User Name</string>
    <string name="user_phone">Phone Number</string>
    <string name="user_password">Password</string>
    <string name="kyc_video_call_ocbc">KYC Video Call OCBC</string>
    <string name="call_text">To continue verification process \n please dial the call button below</string>

    <string name="please_wait">Please Wait...</string>
    <string name="please_wait_text">we\'re finding an agent\n for you in 1 minute</string>

    <string name="poor_network_signal_text">Poor network connection detected.\nPlease check your connectivity</string>
    <string name="poor_network_signal">Poor Network Signal</string>

    <string name="reconnecting_title">Whoops!</string>
    <string name="reconneting_text">Reconnecting</string>

    <string name="success_reconnecting_title">Yeah!</string>
    <string name="success_reconnecting_text">You have succesfully connected</string>

    <string-array name="video_codec_type">
        <item>VP8</item>
        <item>VP9</item>
    </string-array>
</resources>
