<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="15dp"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
        android:paddingStart="@dimen/padding_left"
        android:paddingEnd="@dimen/padding_right"
        android:paddingBottom="@dimen/padding_bottom"
        android:paddingTop="@dimen/padding_top"
        android:layout_marginBottom="@dimen/padding_bottom"
        android:src="@drawable/ocbc_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/blackColor"
        android:gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:paddingBottom="@dimen/padding_bottom"
        android:layout_marginTop="50dp"
        android:visibility="gone"
        />


        <LinearLayout
            android:layout_marginTop="@dimen/padding_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/user_name"
                android:layout_marginBottom="10dp"
                />
            <EditText
                android:id="@+id/et_name"
                android:paddingLeft="10dp"
                android:layout_width="@dimen/edit_text_width"
                android:layout_height="@dimen/edit_text_height"
                android:background="@drawable/edit_text_style"
                android:layout_marginBottom="10dp"
                />
        </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:visibility="gone"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/user_personal_id"
            android:layout_marginBottom="15dp"
            />
        <EditText
            android:id="@+id/calling_name"
            android:paddingLeft="10dp"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="@dimen/edit_text_height"
            android:background="@drawable/edit_text_style"
            android:layout_marginBottom="10dp"
            />

    </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/user_password"
                android:layout_marginBottom="15dp"
                />
            <EditText
                android:id="@+id/et_password"
                android:maxLines="5"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_width="@dimen/edit_text_width"
                android:layout_height="@dimen/edit_text_height"
                android:background="@drawable/edit_text_style"
                android:layout_marginBottom="10dp"
                />

        </LinearLayout>

        <Button
            android:id="@+id/bt_login"
            android:layout_marginTop="30dp"
            android:text="login"
            android:layout_height="@dimen/edit_text_height"
            android:layout_width ="@dimen/edit_text_width"
            android:background="@drawable/button_red_rounded"
            android:layout_gravity="center"
            android:textColor="#ffff"
            android:textStyle="bold"
            />

        <ProgressBar
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/padding_top"
            android:id="@+id/login_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/version_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        />

</RelativeLayout>